--- a/yield_prediction.ipynb
+++ b/yield_prediction.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "460315f2",
+   "metadata": {},
+   "source": [
+    "# Farm Yield Prediction Model\n",
+    "\n",
+    "This notebook demonstrates a machine learning approach to predict tea crop yield based on workers, rainfall, and temperature using Linear Regression and SQLite database integration."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6dcb4c78",
    "metadata": {},
    "outputs": [
@@ -112,8 +122,24 @@
     }
    ],
    "source": [
+    "## 1. Load and Prepare Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1e63021",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "import sqlite3\n",
     "\n",
+    "# Load and prepare data\n",
     "data = {\n",
     "    \"workers\": [5, 7, 6, 8, 10, 4, 9, 6],\n",
     "    \"rainfall\": [10, 20, 15, 25, 30, 5, 28, 18],\n",
@@ -121,48 +147,55 @@
     "    \"tea_kg\": [150, 165, 160, 180, 195, 140, 190, 170]\n",
     "}\n",
     "\n",
-    "df = pd.DataFrame(data)\n",
-    "df\n"
+    "df = pd.DataFrame(data)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "a1e63021",
+   "cell_type": "markdown",
+   "id": "08ada511",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "X = df[[\"workers\", \"rainfall\", \"temperature\"]] # Features (number of workers, rainfall, temperature)\n",
-    "y = df[\"tea_kg\"] # Target variable (tea yield in kg)\n"
+    "## 2. Feature and Target Selection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "03218b9b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Select features (independent variables) and target (dependent variable)\n",
+    "X = df[[\"workers\", \"rainfall\", \"temperature\"]]  # Features\n",
+    "y = df[\"tea_kg\"]  # Target variable\n",
+    "\n",
+    "# Split data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8ede84f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LinearRegression()"
+    "# Initialize and train the Linear Regression model\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "908035f4",
+   "metadata": {},
+   "source": [
+    "## 3. Train Linear Regression Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8f40d43c",
    "metadata": {},
    "outputs": [
@@ -936,61 +969,25 @@
     }
    ],
    "source": [
-    "\n",
-    "model.fit(X_train, y_train)"
+    "# Make a prediction\n",
+    "prediction = model.predict([[6, 20, 22]])  # Example: 6 workers, 20mm rainfall, 22°C temperature"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9297f270",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted tea yield (kg): 171.39473684210526\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Administrator\\AppData\\Roaming\\Python\\Python314\\site-packages\\sklearn\\utils\\validation.py:2691: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "prediction = model.predict([[6, 20, 22]]) # Example input: 6 workers, 20 mm rainfall, 22°C temperature\n",
-    "print(\"Predicted tea yield (kg):\", prediction[0])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "ef5d653e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Absolute Error: 3.636842105263142\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import mean_absolute_error\n",
+    "# Evaluate model performance\n",
     "y_pred = model.predict(X_test)\n",
-    "error = mean_absolute_error(y_test, y_pred)\n",
-    "print(\"Mean Absolute Error:\", error)"
+    "error = mean_absolute_error(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0848715f",
    "metadata": {},
    "outputs": [
@@ -1003,34 +1000,44 @@
     }
    ],
    "source": [
-    "import sqlite3\n",
-    "\n",
-    "# SQLite database\n",
+    "# Create SQLite database and table for storing yield data\n",
     "conn = sqlite3.connect('farm_yield.db')\n",
     "cursor = conn.cursor()\n",
-    "#table creation for input data\n",
-    "cursor.execute('''CREATE TABLE IF NOT EXISTS yield_data (\n",
-    "                    workers INTEGER,\n",
-    "                    rainfall REAL,\n",
-    "                    temperature REAL,\n",
-    "                    tea_kg REAL\n",
-    "                )''')\n",
+    "\n",
+    "# Create table if it doesn't exist\n",
+    "cursor.execute('''\n",
+    "    CREATE TABLE IF NOT EXISTS yield_data (\n",
+    "        id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "        workers INTEGER,\n",
+    "        rainfall REAL,\n",
+    "        temperature REAL,\n",
+    "        tea_kg REAL\n",
+    "    )\n",
+    "''')\n",
+    "\n",
     "conn.commit()\n",
-    "conn.close()\n",
-    "print(\"SQLite database 'farm_yield.db' came to life with table 'yield_data'!\")\n",
-    "\n"
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c25a112",
+   "metadata": {},
+   "source": [
+    "## 4. SQLite Database Integration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ec08e5ea",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Insert sample data into the table\n",
     "conn = sqlite3.connect('farm_yield.db')\n",
     "cursor = conn.cursor()\n",
-    "# Insert sample data into the table,similar to the original dataset\n",
+    "\n",
     "sample_data = [\n",
     "    (5, 10, 20, 150),\n",
     "    (7, 20, 22, 165),\n",
@@ -1041,6 +1048,7 @@
     "    (9, 28, 25, 190),\n",
     "    (6, 18, 22, 170)\n",
     "]\n",
+    "\n",
     "cursor.executemany(\"INSERT INTO yield_data (workers, rainfall, temperature, tea_kg) VALUES (?, ?, ?, ?)\", sample_data)\n",
     "conn.commit()\n",
     "conn.close()"
@@ -1048,21 +1056,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0cb6ea7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import sqlite3\n",
+    "# Load data from database\n",
     "conn = sqlite3.connect('farm_yield.db')\n",
     "df = pd.read_sql_query(\"SELECT * FROM yield_data\", conn)\n",
-    "conn.close()    "
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4b661c0",
+   "metadata": {},
+   "source": [
+    "## 5. Load Data and Train Model from Database"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "daf2f3f7",
    "metadata": {},
    "outputs": [
@@ -1083,21 +1098,21 @@
     }
    ],
    "source": [
-    "#training the model again with the data from the database\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "X = df[[\"workers\", \"rainfall\", \"temperature\"]] # Features (number of workers, rainfall, temperature)\n",
-    "y = df[\"tea_kg\"] # Target variable (tea yield in kg)   \n",
+    "# Training the model again with the data from the database\n",
+    "X = df[[\"workers\", \"rainfall\", \"temperature\"]]  # Features\n",
+    "y = df[\"tea_kg\"]  # Target variable\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "model = LinearRegression()\n",
     "model.fit(X_train, y_train)\n",
-    "prediction = model.predict([[6, 20, 22]]) # Example input: 6 workers, 20 mm rainfall, 22°C temperature\n",
-    "print(\"Predicted tea yield (kg):\", prediction[0])\n"
+    "\n",
+    "# Make prediction\n",
+    "prediction = model.predict([[6, 20, 22]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c9634387",
    "metadata": {},
    "outputs": [
@@ -1110,17 +1125,28 @@
     }
    ],
    "source": [
-    "#saving prediction results back to the database\n",
-    "import sqlite3\n",
+    "# Add predicted_yield column to the table\n",
     "conn = sqlite3.connect('farm_yield.db')\n",
-    "cursor = conn.cursor()  \n",
-    "cursor.execute(\"\"\"\n",
-    "    ALTER TABLE yield_data\n",
-    "    ADD COLUMN predicted_yield REAL\n",
-    "\"\"\")    \n",
-    "conn.commit()\n",
-    "conn.close()\n",
-    "print(\"Column 'predicted_yield' added to 'yield_data' table!\")"
+    "cursor = conn.cursor()\n",
+    "\n",
+    "try:\n",
+    "    cursor.execute(\"\"\"\n",
+    "        ALTER TABLE yield_data\n",
+    "        ADD COLUMN predicted_yield REAL\n",
+    "    \"\"\")\n",
+    "    conn.commit()\n",
+    "except:\n",
+    "    pass\n",
+    "finally:\n",
+    "    conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ca88493",
+   "metadata": {},
+   "source": [
+    "## 6. Save Prediction Results to Database"
    ]
   },
   {
@@ -1130,47 +1156,39 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (245603729.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mimport sklearn.linear_model import LinearRegression\u001b[39m\n                                ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted yields updated in the database, YAAAAAY!\n"
      ]
     }
    ],
    "source": [
-    "#get the predicted yield for each row and update the database\n",
-    "import pandas as pd\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import sqlite3\n",
-    "\n",
-    "#load data from database\n",
+    "# Get the predicted yield for each row and update the database\n",
     "conn = sqlite3.connect('farm_yield.db')\n",
     "df = pd.read_sql_query(\"SELECT * FROM yield_data\", conn)\n",
     "X = df[[\"workers\", \"rainfall\", \"temperature\"]]\n",
     "y = df[\"tea_kg\"]\n",
     "\n",
-    "#train the model\n",
+    "# Train the model\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "model = LinearRegression()  \n",
+    "model = LinearRegression()\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "#predict yield for each row\n",
+    "# Predict yield for each row\n",
     "df['predicted_yield'] = model.predict(X[[\"workers\", \"rainfall\", \"temperature\"]])\n",
     "conn.close()\n",
     "\n",
-    "\n",
-    "#update the database with predicted yields\n",
+    "# Update the database with predicted yields\n",
     "conn = sqlite3.connect('farm_yield.db')\n",
     "cursor = conn.cursor()\n",
     "\n",
     "for index, row in df.iterrows():\n",
-    "    cursor.execute(\"UPDATE yield_data SET predicted_yield = ? WHERE rowid = ?\", (row['predicted_yield'], index + 1))\n",
+    "    cursor.execute(\"UPDATE yield_data SET predicted_yield = ? WHERE id = ?\", (row['predicted_yield'], row['id']))\n",
     "\n",
     "conn.commit()\n",
     "conn.close()\n",
-    "print(\"Predicted yields updated in the database, YAAAAAY!\")"
+    "print(\"Predicted yields updated in the database!\")"
    ]
   }
  ],
